--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,39 +1,38 @@
-node {
-   def mvnHome
-   stage('Preparation') { // for display purposes
-      // Get some code from a GitHub repository
-      git 'https://github.com/scmgalaxy/helloworld-java-maven'
-      // Get the Maven tool.
-      // ** NOTE: This 'M3' Maven tool must be configured
-      // **       in the global configuration.           
-      mvnHome = tool 'maven'
-   }
-   stage('Build') {
-      // Run the maven build
-      if (isUnix()) {
-         sh "'${mvnHome}/bin/mvn' -Dmaven.test.failure.ignore clean compile"
-      } else {
-         bat(/"${mvnHome}\bin\mvn" -Dmaven.test.failure.ignore clean compile/)
-      }
-   }
-  stage('UT') {
-      // Run the maven build
-      if (isUnix()) {
-         sh "'${mvnHome}/bin/mvn' -Dmaven.test.failure.ignore clean test"
-      } else {
-         bat(/"${mvnHome}\bin\mvn" -Dmaven.test.failure.ignore clean test/)
-      }
-   }
-     stage('Pack') {
-      // Run the maven build
-      if (isUnix()) {
-         sh "'${mvnHome}/bin/mvn' -Dmaven.test.failure.ignore clean package"
-      } else {
-         bat(/"${mvnHome}\bin\mvn" -Dmaven.test.failure.ignore clean package/)
-      }
-   }
-   stage('Results') {
-      junit '**/target/surefire-reports/TEST-*.xml'
-      archive 'target/*.jar'
-   }
+pipeline {
+    agent any
+
+    stages {
+        stage('Build') {
+            steps {
+                dir('C:/Users/sqthwoon/Desktop/Jenkins/build.bat'){
+                    /* execute commands in the scripts directory */
+                }
+                bat 'C:/Users/sqthwoon/Desktop/Jenkins/build.bat'
+            }
+        }
+        stage('Test') {
+            steps {
+                dir('C:/Users/sqthwoon/Desktop/Jenkins/test.bat'){
+                    /* execute commands in the scripts directory */
+                }
+                bat 'C:/Users/sqthwoon/Desktop/Jenkins/test.bat'
+            }
+        }
+        stage('Package') {
+            steps {
+                dir('C:/Users/sqthwoon/Desktop/Jenkins/package.bat'){
+                    /* execute commands in the scripts directory */
+                }
+                bat 'C:/Users/sqthwoon/Desktop/Jenkins/package.bat'
+            }
+        }
+        stage('Deploy') {
+            steps {
+                dir('C:/Users/sqthwoon/Desktop/Jenkins/deploy.bat'){
+                    /* execute commands in the scripts directory */
+                }
+                bat 'C:/Users/sqthwoon/Desktop/Jenkins/deploy.bat'
+            }
+        }
+    }
 }
